--- a/devel/dbicdump.yaml
+++ b/devel/dbicdump.yaml
@@ -9,7 +9,6 @@ loader_options:
   use_moose: 1
   db_schema:
       - viroserve
-      - delta
       - freezer
   qualify_objects: 1
   moniker_parts:
@@ -17,10 +16,8 @@ loader_options:
     - name
   constraint:
     - - viroserve
-      - '^(visit|sample|sample_type|aliquot|unit|additive|tissue_type|infection|location|medication|patient_medication|arv_class|viral_load|cell_count|sample_search|patient|patient_cohort|patient_alias|patient_patient_group|patient_group|cohort|cohort_patient_summary|scientist|scientist_group|scientist_scientist_group|sequence_search|lab_result_num|lab_result_num_type|lab_result_cat|lab_result_cat_type|lab_result_cat_value|import_job|genome_region|na_sequence|na_sequence_latest_revision|protocol|protocol_type|primer|primer_position|project|project_materials|distinct_sample_search|chromat|chromat_na_sequence|extraction|extract_type|rt_product|pcr_product|pcr_template|organism|sample_note|gel_lane|project_material_scientist_progress|sequence_type|chromat_type|pcr_product_primer|copy_number|copy_number_gel_lane|gel|sample_patient_date|bisulfite_converted_dna)$'
+      - '^(visit|sample|sample_type|aliquot|unit|additive|tissue_type|infection|location|medication|patient_medication|arv_class|viral_load|cell_count|sample_search|patient|patient_cohort|patient_alias|patient_patient_group|patient_group|cohort|cohort_patient_summary|scientist|scientist_group|scientist_scientist_group|sequence_search|lab_result_num|lab_result_num_type|lab_result_cat|lab_result_cat_type|lab_result_cat_value|import_job|genome_region|na_sequence|na_sequence_latest_revision|protocol|protocol_type|primer|primer_position|project|project_materials|distinct_sample_search|chromat|chromat_na_sequence|extraction|extract_type|rt_product|pcr_product|pcr_template|organism|sample_note|gel_lane|project_material_scientist_progress|sequence_type|chromat_type|pcr_product_primer|copy_number|copy_number_gel_lane|gel|sample_patient_date|bisulfite_converted_dna|derivation|derivation_protocol|protocol_output)$'
     - - freezer
-      - .
-    - - delta
       - .
   moniker_map:
     viroserve:
@@ -85,9 +82,8 @@ loader_options:
       unit: Unit
       viral_load: ViralLoad
       visit: Visit
-    delta:
       derivation: Derivation
-      protocol: DerivationProtocol
+      derivation_protocol: DerivationProtocol
       protocol_output: DerivationProtocolOutput
     freezer:
       box_pos: BoxPos
@@ -108,8 +104,11 @@ loader_options:
       project_materials: project_assignments
       sample_notes: notes
     Derivation:
+      derivation_protocol: protocol
       samples: output_samples
       sample: input_sample
+    DerivationProtocolOutput:
+      derivation_protocol: protocol
     Box:
       box_pos: box_positions
     BoxPos:
