--- a/viroverse.conf
+++ b/viroverse.conf
@@ -79,3 +79,6 @@ quality = /usr/local/bin/quality
     isla_sequences = 0
     censor_dates = 0
 </features>
+
+# Redirect the root page to a specific view (e.g. /cohort/1)
+redirect_root_to =
