Use psql variables for role names in migrations
Drawing from the example of the bootstrap-database script, sqitch
migrations are modified to use variable role names when deploying and
verifying changes. sqitch.conf renamed to sqitch.conf.example;
potentially we could write out a suitable sqitch.conf from the
bootstrap-database script.

--- a/sqitch.conf.example
+++ b/sqitch.conf.example
@@ -1,6 +1,9 @@
 [core]
     engine = pg
     top_dir = ./schema
+[core.variables]
+    ro_user = viroverse_r
+    rw_user = viroverse_w
 [engine "pg"]
     target = local
 [deploy]
@@ -11,3 +14,6 @@
 	uri = db:pg://vverse_admin@localhost/viroverse
 [target "vagrant"]
 	uri = db:pg://vverse_admin@192.168.0.2/viroverse
+[deploy.variables]
+    ro_user = viroverse_r
+    rw_user = viroverse_w
