Add DB view identifying pools for PacBio sequencing

--- a/devel/dbicdump.yaml
+++ b/devel/dbicdump.yaml
@@ -16,7 +16,7 @@ loader_options:
     - name
   constraint:
     - - viroserve
-      - '^(visit|sample|sample_type|aliquot|unit|additive|tissue_type|infection|location|medication|patient_medication|arv_class|viral_load|cell_count|sample_search|patient|patient_cohort|patient_alias|patient_patient_group|patient_group|cohort|cohort_patient_summary|scientist|scientist_group|scientist_scientist_group|sequence_search|lab_result_num|lab_result_num_type|lab_result_cat|lab_result_cat_type|lab_result_cat_value|import_job|genome_region|na_sequence|na_sequence_latest_revision|protocol|protocol_type|primer|primer_position|project|project_materials|distinct_sample_search|chromat|chromat_na_sequence|extraction|extract_type|rt_product|pcr_product|pcr_template|organism|sample_note|gel_lane|project_material_scientist_progress|sequence_type|chromat_type|pcr_product_primer|copy_number|copy_number_gel_lane|gel|sample_patient_date|bisulfite_converted_dna|derivation|derivation_protocol|protocol_output|enzyme|na_sequence_note|primer_search|numeric_assay_protocol|numeric_assay_result)$'
+      - '^(visit|sample|sample_type|aliquot|unit|additive|tissue_type|infection|location|medication|patient_medication|arv_class|viral_load|cell_count|sample_search|patient|patient_cohort|patient_alias|patient_patient_group|patient_group|cohort|cohort_patient_summary|scientist|scientist_group|scientist_scientist_group|sequence_search|lab_result_num|lab_result_num_type|lab_result_cat|lab_result_cat_type|lab_result_cat_value|import_job|genome_region|na_sequence|na_sequence_latest_revision|protocol|protocol_type|primer|primer_position|project|project_materials|distinct_sample_search|chromat|chromat_na_sequence|extraction|extract_type|rt_product|pcr_product|pcr_template|organism|sample_note|gel_lane|project_material_scientist_progress|sequence_type|chromat_type|pcr_product_primer|copy_number|copy_number_gel_lane|gel|sample_patient_date|bisulfite_converted_dna|derivation|derivation_protocol|protocol_output|enzyme|na_sequence_note|primer_search|numeric_assay_protocol|numeric_assay_result|pacbio_pool)$'
     - - freezer
       - .
   moniker_map:
@@ -57,6 +57,7 @@ loader_options:
       numeric_assay_protocol: NumericAssayProtocol
       numeric_assay_result: NumericAssayResult
       organism: Organism
+      pacbio_pool: PacbioPool
       patient: Patient
       patient_alias: PatientAlias
       patient_cohort: PatientCohort
