Put PacBio sequencing behind a feature flag

--- a/viroverse.conf
+++ b/viroverse.conf
@@ -78,6 +78,7 @@ quality = /usr/local/bin/quality
     epitopedb = 0
     isla_sequences = 0
     censor_dates = 0
+    pacbio_sequencing = 0
 </features>
 
 # Redirect the root page to a specific view (e.g. /cohort/1)
